[gd_scene load_steps=34 format=3 uid="uid://82fmbt2ciqdb"]

[ext_resource type="Script" path="res://addons/godot-course/global/course_menu.gd" id="1_tt42s"]
[ext_resource type="Theme" uid="uid://dlwl2v5s14s14" path="res://addons/godot-course/ui/main_theme.tres" id="2_smejy"]
[ext_resource type="FontFile" uid="uid://dg3dawn3jkrrn" path="res://addons/godot-course/ui/fonts/Accuratist.otf" id="3_5554o"]
[ext_resource type="Texture2D" uid="uid://dy2sfigv6lsd" path="res://addons/godot-course/ui/icons/gear.svg" id="3_mt6i1"]
[ext_resource type="PackedScene" uid="uid://bg2n3gmwcepgo" path="res://addons/godot-course/global/bt_item.tscn" id="3_w76rc"]
[ext_resource type="Texture2D" uid="uid://cax64353yu7r5" path="res://addons/godot-course/ui/icons/icon_editor.svg" id="4_8cjlq"]
[ext_resource type="Texture2D" uid="uid://f70jqjsy70eb" path="res://addons/godot-course/ui/icons/icon_monochrome_godot.svg" id="5_gwal7"]
[ext_resource type="Texture2D" uid="uid://x3mhqjkjpda" path="res://addons/godot-course/ui/icons/icon_close.png" id="5_s812u"]
[ext_resource type="AudioStream" uid="uid://cvib8ext6nxiq" path="res://addons/godot-course/ui/sounds/selection.wav" id="7_c0r1d"]
[ext_resource type="Texture2D" uid="uid://dpcgstivpcarx" path="res://addons/godot-course/ui/icons/icon_code.svg" id="7_kch2j"]
[ext_resource type="Texture2D" uid="uid://ctdvfdyrtpi1x" path="res://addons/godot-course/ui/icons/node.svg" id="7_qa8jj"]
[ext_resource type="Texture2D" uid="uid://dlgtgtcqtw4a1" path="res://addons/godot-course/ui/icons/controller.svg" id="8_2woei"]
[ext_resource type="AudioStream" uid="uid://bn0so6fbchkfb" path="res://addons/godot-course/ui/sounds/close.wav" id="8_gr2um"]
[ext_resource type="Texture2D" uid="uid://bacp2v538w808" path="res://addons/godot-course/ui/icons/player.svg" id="9_a44n1"]
[ext_resource type="AudioStream" uid="uid://cr1mibl6u6tfg" path="res://addons/godot-course/ui/sounds/upgrade.wav" id="9_p0xr3"]
[ext_resource type="Texture2D" uid="uid://cgksx4q8l75hh" path="res://addons/godot-course/ui/icons/enemy.svg" id="10_rn8qg"]
[ext_resource type="Texture2D" uid="uid://ccytq4lte4fr1" path="res://addons/godot-course/ui/icons/icon_test.svg" id="12_e5c05"]
[ext_resource type="AudioStream" uid="uid://do3xd6n0hj7og" path="res://addons/godot-course/ui/sounds/denied.wav" id="12_hoay4"]
[ext_resource type="Shader" path="res://addons/godot-course/global/shock.gdshader" id="13_4731d"]
[ext_resource type="Texture2D" uid="uid://b8ah3bld8d0h6" path="res://addons/godot-course/ui/icons/exclamation.png" id="13_oweno"]
[ext_resource type="AudioStream" uid="uid://jvjt4r68od0j" path="res://addons/godot-course/ui/sounds/change.wav" id="17_k53vv"]

[sub_resource type="Shader" id="Shader_ydr1v"]
code = "shader_type canvas_item;

uniform vec4 color : source_color;
uniform float scale;

mat2 r(float a) {
    float s = sin(a);
    float c = cos(a);
    return mat2(vec2(c,-s),vec2(s,c));
}

void fragment(){
	vec2 iResolution = 1.0 / SCREEN_PIXEL_SIZE;
    vec2 uv = ((FRAGCOORD.xy-.5*iResolution.xy)/iResolution.y*5.+10.)*r(TIME*.03);
	uv *= vec2(scale);
    float id = mod(floor(uv.x)+floor(uv.y),2.);
    float f = smoothstep(-.6,.6,cos(fract(TIME*(id*2.-1.)+id*.5)*3.1415));
    vec2 guv = (fract(uv)-.5)*(cos(fract(TIME+id*.5)*6.282)*.5+1.5)*r(f*1.5707);
    COLOR = color*(length(max(abs(guv)-.25,0.)) < .1 ? 1. : .6);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gkc3p"]
shader = SubResource("Shader_ydr1v")
shader_parameter/color = Color(0, 0.443137, 1, 0.0588235)
shader_parameter/scale = 3.0

[sub_resource type="Shader" id="Shader_vosxh"]
code = "shader_type canvas_item;
#define t TIME*2.
#define SIZE 30.

uniform vec3 col1 : source_color;
uniform vec3 col2 : source_color;

vec2 ran(vec2 uv) {
    uv *= vec2(dot(uv,vec2(127.1,311.7)),dot(uv,vec2(227.1,521.7)) );
    return 1.0+fract(tan(cos(uv)*123.6)*3533.3)*fract(tan(cos(uv)*123.6)*3533.3);
}
vec2 pt(vec2 id) {
    return sin(t*(ran(id+.5)-0.5)+ran(id-20.1)*8.0)*0.5;
}


void fragment()
{
	vec2 iResolution = 1.0 / SCREEN_PIXEL_SIZE;
    vec2 uv = (FRAGCOORD.xy-.5*iResolution)/iResolution.x;
    vec2 off = TIME/-vec2(50.,30.);
    uv += off;
    uv *= SIZE;
    
    vec2 gv = fract(uv)-.5;
    vec2 id = floor(uv);
    
    float mindist = 1e9;
    vec2 vorv;
    for(float i=-1.;i<=1.;i++) {
        for(float j=-1.;j<=1.;j++) { 
            vec2 offv = vec2(i,j);
            float dist = length(gv+pt(id+offv)-offv);
            if(dist<mindist){
                mindist = dist;
                vorv = (id+pt(id+offv)+offv)/SIZE-off;
            }
        }
    }
    
    vec3 col = mix(col1,col2,clamp(vorv.x*2.2+vorv.y,-1.,1.)*0.5+0.5);
    
    COLOR = vec4(col,1.0);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5autu"]
shader = SubResource("Shader_vosxh")
shader_parameter/col1 = Color(0.623529, 0.729412, 1, 1)
shader_parameter/col2 = Color(0, 0.231373, 0.623529, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f1dwg"]
shader = ExtResource("13_4731d")
shader_parameter/base_color = Color(0, 0.628985, 0.105705, 1)
shader_parameter/shock_color = Color(1, 1, 1, 1)
shader_parameter/amplitude = 30.0
shader_parameter/frequecy = 10.0
shader_parameter/flip_direction = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4f3ek"]
shader = ExtResource("13_4731d")
shader_parameter/base_color = Color(0, 0.627451, 0.105882, 1)
shader_parameter/shock_color = Color(1, 1, 1, 1)
shader_parameter/amplitude = 30.0
shader_parameter/frequecy = 10.0
shader_parameter/flip_direction = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3maa"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.701961, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6awxf"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.254902, 0.254902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4dkql"]
bg_color = Color(1, 0.254902, 0.254902, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.12549, 0.12549, 0.12549, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_k3yyo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/PanelContainer/Gears/Gear:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/PanelContainer/Gears/Gear2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/PanelContainer/Gears/Gear3:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-6.28319]
}

[sub_resource type="Animation" id="Animation_8irp0"]
resource_name = "gear"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/PanelContainer/Gears/Gear:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/PanelContainer/Gears/Gear2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/PanelContainer/Gears/Gear3:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.12001, -6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xhl5i"]
_data = {
"RESET": SubResource("Animation_k3yyo"),
"gear": SubResource("Animation_8irp0")
}

[node name="CourseMenu" type="CanvasLayer"]
script = ExtResource("1_tt42s")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_gkc3p")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 8
theme = ExtResource("2_smejy")

[node name="PanelContainer" type="PanelContainer" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 26.5)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -265.0
offset_right = 400.0
offset_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2

[node name="Gears" type="Control" parent="Panel/PanelContainer"]
show_behind_parent = true
layout_mode = 2

[node name="Gear" type="Sprite2D" parent="Panel/PanelContainer/Gears"]
position = Vector2(-40, -18)
rotation = 6.28319
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_mt6i1")

[node name="Gear2" type="Sprite2D" parent="Panel/PanelContainer/Gears"]
position = Vector2(-20, 56)
rotation = 6.28319
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_mt6i1")

[node name="Gear3" type="Sprite2D" parent="Panel/PanelContainer/Gears"]
position = Vector2(45, -33)
rotation = -6.28319
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_mt6i1")

[node name="MarginContainer" type="MarginContainer" parent="Panel/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 60

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/PanelContainer/MarginContainer"]
material = SubResource("ShaderMaterial_5autu")
layout_mode = 2
follow_focus = true

[node name="LessonColumn" type="VBoxContainer" parent="Panel/PanelContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14
alignment = 1

[node name="Bt_lesson" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/que_es_godot/que_es_godot.gd"
title = "¿Qué es godot?           "
icon = ExtResource("5_gwal7")

[node name="Bt_lesson2" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/editor_tour/editor_tour.gd"
title = "Editor tour                      "
item_id = 1
icon = ExtResource("4_8cjlq")
anim_delay = 0.2

[node name="Bt_lesson3" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/nodos/nodos.gd"
title = "Nodos                               "
item_id = 2
icon = ExtResource("7_qa8jj")
anim_delay = 0.4

[node name="Bt_lesson4" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/hola_gdscript/hola_gdscript.gd"
title = "Hola GDScript              "
item_id = 3
icon = ExtResource("7_kch2j")
anim_delay = 0.6

[node name="Bt_lesson5" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/variables/variables.gd"
title = "Variables                       "
item_id = 4
icon = ExtResource("7_kch2j")
anim_delay = 0.8

[node name="Bt_lesson6" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/constantes/constantes.gd"
title = "Constantes                  "
item_id = 5
icon = ExtResource("7_kch2j")
anim_delay = 1.0

[node name="Bt_lesson7" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/tipos_de_datos/tipos_de_datos.gd"
title = "Tipos de datos           "
item_id = 6
icon = ExtResource("7_kch2j")
anim_delay = 1.2

[node name="Bt_lesson8" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/funciones/funciones.gd"
title = "Funciones                     "
item_id = 7
icon = ExtResource("7_kch2j")
anim_delay = 1.4

[node name="Bt_lesson9" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/operadores/operadores.gd"
title = "Operadores                 "
item_id = 8
icon = ExtResource("7_kch2j")
anim_delay = 1.6

[node name="Bt_lesson10" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/condicionales/condicionales.gd"
title = "Condicionales            "
item_id = 9
icon = ExtResource("7_kch2j")
anim_delay = 1.8

[node name="Bt_lesson11" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/ciclos/ciclos.gd"
title = "Ciclos                                "
item_id = 10
icon = ExtResource("7_kch2j")
anim_delay = 2.0

[node name="Bt_lesson12" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/listas/listas.gd"
title = "Listas                                "
item_id = 11
icon = ExtResource("7_kch2j")
anim_delay = 2.2

[node name="Bt_lesson13" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/errores/errores.gd"
title = "Errores                             "
item_id = 12
icon = ExtResource("7_kch2j")
anim_delay = 2.4

[node name="Bt_lesson14" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/proyecto/proyecto.gd"
title = "Proyecto                         "
item_id = 13
icon = ExtResource("8_2woei")
anim_delay = 2.6

[node name="Bt_lesson15" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/jugador_escena/jugador_escena.gd"
title = "Jugador escena       "
item_id = 14
icon = ExtResource("9_a44n1")
anim_delay = 2.8

[node name="Bt_lesson16" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/programando_jugador/programar_jugador.gd"
title = "Programar jugador"
item_id = 15
icon = ExtResource("7_kch2j")
anim_delay = 3.0

[node name="Bt_lesson17" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/creando_enemigo/creando_enemigo.gd"
title = "Creando Enemigo   "
item_id = 16
icon = ExtResource("10_rn8qg")
anim_delay = 3.2

[node name="Bt_lesson18" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/escena_principal/escena_principal.gd"
title = "Escena principal      "
item_id = 17
icon = ExtResource("7_kch2j")
anim_delay = 3.4

[node name="Bt_lesson19" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/interfaz_usuario/interfaz_usuario.gd"
title = "Interfaz de usuario "
item_id = 18
icon = ExtResource("7_kch2j")
anim_delay = 3.6

[node name="Bt_lesson20" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/LessonColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/lessons/finalizando/finalizando.gd"
title = "Finalizando                  "
item_id = 19
icon = ExtResource("7_kch2j")
anim_delay = 3.8

[node name="TestColumn" type="VBoxContainer" parent="Panel/PanelContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Bt_lesson" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/TestColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/tests/prueba1.gd"
title = "Primera evaluación  "
item_id = 20
icon = ExtResource("12_e5c05")
evaluation_mode = true

[node name="Bt_lesson2" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/TestColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/tests/prueba2.gd"
title = "Segunda evaluación"
item_id = 21
icon = ExtResource("12_e5c05")
anim_delay = 0.2
evaluation_mode = true

[node name="Bt_lesson3" parent="Panel/PanelContainer/MarginContainer/ScrollContainer/TestColumn" instance=ExtResource("3_w76rc")]
layout_mode = 2
lesson_path = "res://addons/godot-course/tests/prueba3.gd"
title = "Tercera evaluación   "
item_id = 22
icon = ExtResource("12_e5c05")
anim_delay = 0.4
evaluation_mode = true

[node name="Lb_title" type="Label" parent="Panel/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_5554o")
theme_override_font_sizes/font_size = 64
text = "Lecciones"

[node name="Bt_prev" type="Button" parent="Panel/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"bt_change"
theme_override_font_sizes/font_size = 22
text = "   ◀    "

[node name="Exclamation" type="TextureRect" parent="Panel/PanelContainer/Bt_prev"]
visible = false
material = SubResource("ShaderMaterial_f1dwg")
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -5.5
offset_top = -16.0
offset_right = 26.5
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("13_oweno")
expand_mode = 1
stretch_mode = 4

[node name="Bt_next" type="Button" parent="Panel/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"bt_change"
theme_override_font_sizes/font_size = 22
text = "    ▶   "

[node name="Exclamation" type="TextureRect" parent="Panel/PanelContainer/Bt_next"]
visible = false
material = SubResource("ShaderMaterial_4f3ek")
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -16.0
offset_right = 3.5
offset_bottom = 16.0
grow_vertical = 2
texture = ExtResource("13_oweno")
expand_mode = 1
stretch_mode = 4

[node name="Bt_close" type="Button" parent="Panel/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0.701961, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0.12549, 0.12549, 0.12549, 1)
theme_override_colors/icon_hover_color = Color(1, 0.254902, 0.254902, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_j3maa")
theme_override_styles/hover = SubResource("StyleBoxFlat_6awxf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4dkql")
icon = ExtResource("5_s812u")
expand_icon = true

[node name="Bt_start" type="Button" parent="Panel/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "EMPEZAR LECCIÓN"

[node name="sd_selection" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_c0r1d")
bus = &"UI"

[node name="sd_close" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_gr2um")
bus = &"UI"

[node name="sd_denied" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("12_hoay4")
bus = &"UI"

[node name="sd_upgrade" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_p0xr3")
bus = &"UI"

[node name="sd_change" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("17_k53vv")
bus = &"UI"

[node name="Anim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_xhl5i")
}

[connection signal="pressed" from="Panel/PanelContainer/Bt_prev" to="." method="_on_change_list_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/Bt_next" to="." method="_on_change_list_pressed"]
